c4.out
   Compiling rp-pico v0.7.0 (/home/pi/rp-hal-boards/boards/rp-pico)
error[E0412]: cannot find type `I2C` in this scope
  --> boards/rp-pico/examples/b_blinky.rs:92:34
   |
92 |     MCP4725<rp2040_hal::i2c::I2C<I2C, rp2040_hal::gpio::Pins>, Mutex<RefCell<u8>>>, // dac component 
   |                                  ^^^ not found in this scope
   |
help: consider importing one of these items
   |
6  | use crate::hal::I2C;
   |
6  | use crate::hal::gpio::I2C;
   |
6  | use i2c_pio::I2C;
   |
6  | use rp2040_hal::I2C;
   |
     and 1 other candidate

warning: unused import: `core::fmt::Write as FmtWrite`
 --> boards/rp-pico/examples/b_blinky.rs:6:5
  |
6 | use core::fmt::Write as FmtWrite;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `rp_pico::entry`
  --> boards/rp-pico/examples/b_blinky.rs:10:5
   |
10 | use rp_pico::entry;
   |     ^^^^^^^^^^^^^^

warning: unused imports: `Operation`, `Read`, `Transactional`, `WriteIter`, `Write`
  --> boards/rp-pico/examples/b_blinky.rs:21:35
   |
21 | use embedded_hal::blocking::i2c::{Operation, Read, Transactional, Write, WriteIter};
   |                                   ^^^^^^^^^  ^^^^  ^^^^^^^^^^^^^  ^^^^^  ^^^^^^^^^

error[E0107]: this struct takes 1 generic argument but 2 generic arguments were supplied
  --> boards/rp-pico/examples/b_blinky.rs:92:5
   |
92 |     MCP4725<rp2040_hal::i2c::I2C<I2C, rp2040_hal::gpio::Pins>, Mutex<RefCell<u8>>>, // dac component 
   |     ^^^^^^^ expected 1 generic argument                        ------------------ help: remove this generic argument
   |
note: struct defined here, with 1 generic parameter: `I2C`
  --> /home/pi/.cargo/registry/src/github.com-1285ae84e5963aae/mcp4725-0.4.2/src/lib.rs:58:12
   |
58 | pub struct MCP4725<I2C>
   |            ^^^^^^^ ---

Some errors have detailed explanations: E0107, E0412.
For more information about an error, try `rustc --explain E0107`.
warning: `rp-pico` (example "b_blinky") generated 3 warnings
error: could not compile `rp-pico` due to 2 previous errors; 3 warnings emitted
